Scrolling broken in iTunes connect pages https://bugs.webkit.org/show_bug.cgi?id=157678

Reviewed by Zalan Bujtas.

Source/WebCore:

Added fast/flexbox/nested-columns-min-intrinsic-disabled.html

Turn off minimum intrinsic size adjustment for flexboxes. This violates the spec,
but until we can produce good results that is what we need to do. Blink has also
turned off nested columns intrinsic sizing as well, so we match them with this
change.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::adjustChildSizeForMinAndMax):

LayoutTests:

* fast/flexbox/nested-column-intrinsic-min-disabled-expected.html: Added.
* fast/flexbox/nested-column-intrinsic-min-disabled.html: Added.



Canonical link: https://commits.webkit.org/176062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201218 268f45cc-cd09-0410-ab3c-d52691b4dbfc